syntax = "proto3";

package user.v1.message.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/dapod93/learn-grpc/proto/gen/user/v1/message/v1;usermv1";

message GetUserByFilterRequest {
  optional int64 id = 1 [(buf.validate.field).int64.gt = 0];
  optional string email = 2;
}
