syntax = "proto3";

package user.v1.message.v1;

option go_package = "github.com/dapod93/learn-grpc/proto/gen/user/v1/message/v1;usermv1";

message GetUserByFilterResponse {
  string message = 1;
}
