syntax = "proto3";

package user.v1;

import "user/v1/message/v1/request.proto";
import "user/v1/message/v1/response.proto";

option go_package = "github.com/dapod93/learn-grpc/proto/gen/user/v1;userv1";

service UserService {
  rpc GetUserByFilter(user.v1.message.v1.GetUserByFilterRequest) returns (user.v1.message.v1.GetUserByFilterResponse) {}
}
